--- a/src/templates/partials/service.hbs
+++ b/src/templates/partials/service.hbs
@@ -13,7 +13,8 @@
                                 <img src="#" alt="server down">
                             </div>
                             <h4>Weddding</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, maiores.</p>
+                            <p>"Once in a while, Right in the middle of an ordinary life, Love gives us a fairy tale."
+                                make your special events precious with the gems of pic.</p>
                         </div>
                     </dvi>
                 </div>
@@ -23,10 +24,11 @@
                     <dvi class="box">
                         <div class="our-services ssl">
                             <div class="icon">
-                                <img src="#" alt="server down">
+                                <img src="/public/img/drone.svg" alt="server down">
                             </div>
-                            <h4>Pre-Weddding</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, maiores.</p>
+                            <h4>Drone shoot</h4>
+                            <p>we have the latest tools/technology to capture your events,
+                                i think drones are a good tool to go after high-valued photos</p>
                         </div>
                     </dvi>
                 </div>
@@ -39,7 +41,7 @@
                                 <img src="#" alt="server down">
                             </div>
                             <h4>Baby Shower</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, maiores.</p>
+                            <p>“So happy to <B>Shower</B> you with a few fun things for baby!”</p>
                         </div>
                     </dvi>
                 </div>
